# ludv-note

./: Cargo.nix  Cargo.toml  LICENSE  flake.nix
src/: config.rs  grep.rs  ids.rs  lib.rs  main.rs
src/actions/: delete.rs  edit.rs  find.rs  list.rs  mod.rs  present.rs
