[package]
name = "ludv-note"
version = "0.1.0"
edition = "2021"

[features]
grep = ["dep:grep"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expanduser = "1.2.2"
grep = { version = "0.3.1", optional = true }
regex = "1.10.4"
termimad = "0.29.1"
walkdir = "2.5.0"
